--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
-    "server" : "npx nodemon src/index.ts"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "server": "npx nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
